[package]
name = "scrypt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
scrypt = { version = "0.11", default-features = false }
hex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true